--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.514.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
